# AssetLens

./: .env.example  .gitignore  DOCKER.md  README.md  Requestly.json  docker-compose.yml
apps/: README.md
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: server.ts
apps/api/src/controllers/: accountController.ts  authController.ts  portfolioController.ts  zerodhaController.ts
apps/api/src/db/: prisma.ts  redis.ts
apps/api/src/dto/: ai.dto.ts  auth.dto.ts  binance.dto.ts  portfolio.dto.ts  zerodha.dto.ts
apps/api/src/middleware/: authMiddleware.ts
apps/api/src/routes/: aiRoutes.ts  authRoutes.ts  binanceRoutes.ts  portfolioRoutes.ts  zerodhaRoutes.ts
apps/api/src/services/: accountService.ts  binanceInrService.ts  fastApiClient.ts  portfolioSnapshotService.ts  portfolioSummaryService.ts  zerodhaService.ts
apps/langchain-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
apps/langchain-service/app/: __init__.py  api_fetch.py  chat_agent.py  config.py  llm_factory.py  prompts.py  route_tools.py  routes.py  schemas.py
apps/web/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/: AuthGuard.tsx  (+11 more)
src/controllers/: accountController.ts
src/models/: accountModel.ts
src/routes/: accountRoutes.ts
src/services/: accountService.ts
src/services/binance/: wallet.ts
(+20 files in other folders)
